# ecom

./: WORKSPACE.bazel  bazel-bin  bazel-out  bazel-platform  bazel-testlogs  nx.json  package.json  tsconfig.base.json  workspace.json
apis/: .env.template  package.json
apis/src/: app.module.ts  main.ts
apis/src/auth/: auth.module.ts
apis/src/auth/decorators/: get-user.decorator.ts  raw-headers.decorator.ts
apis/src/auth/dto/: create-user.dto.ts  login-user.dto.ts
apis/src/auth/entities/: user.entity.ts
apis/src/auth/guards/: user-role.guard.ts
apis/src/common/dtos/: pagination.dto.ts
apis/src/files/: files.controller.ts  files.service.ts
apis/src/products/: products.controller.ts  products.service.ts
apis/src/products/dto/: create-product.dto.ts
apis/src/products/entities/: product.entity.ts
apis/src/shop/: shop.controller.ts  shop.module.ts  shop.service.ts
apis/src/shop/decorators/: get-shop.decorator.ts  index.ts
apis/src/shop/dto/: create-shop.dto.ts
apis/src/shop/entities/: index.ts  shop.entity.ts
apps/site/: package.json
e2e/site/: cypress.json  project.json
e2e/ui/: cypress.json  project.json
